--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
+cachetools==4.2.4
+certifi==2024.2.2
+charset-normalizer==2.0.12
 click==8.0.4
 colorama==0.4.5
 dataclasses==0.8
 Flask==2.0.3
+google-api-core==2.8.2
+google-auth==2.22.0
+google-cloud-speech==2.14.1
+googleapis-common-protos==1.56.3
+grpcio==1.48.2
+grpcio-status==1.48.2
+idna==3.6
 importlib-metadata==4.8.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+proto-plus==1.23.0
+protobuf==3.19.6
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+requests==2.27.1
+rsa==4.9
+six==1.16.0
+SpeechRecognition==3.9.0
 typing_extensions==4.1.1
+urllib3==1.26.18
 Werkzeug==2.0.3
 zipp==3.6.0
