--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ click==8.1.7
 colorama==0.4.6
 coloredlogs==15.0.1
 dataclasses-json==0.5.14
+decorator==4.4.2
 Deprecated==1.2.14
 distro==1.9.0
 exceptiongroup==1.2.0
@@ -45,6 +46,8 @@ httpx==0.27.0
 huggingface-hub==0.22.2
 humanfriendly==10.0
 idna==3.6
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
 itsdangerous==2.1.2
@@ -66,6 +69,7 @@ marshmallow==3.21.1
 mdurl==0.1.2
 mmh3==4.1.0
 monotonic==1.6
+moviepy==1.0.3
 mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
@@ -88,7 +92,9 @@ opentelemetry-util-http==0.45b0
 orjson==3.10.0
 overrides==7.7.0
 packaging==23.2
+pillow==10.3.0
 posthog==3.5.0
+proglog==0.1.10
 proto-plus==1.23.0
 protobuf==4.25.3
 pulsar-client==3.4.0
@@ -96,6 +102,7 @@ pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pydantic==2.6.4
 pydantic_core==2.16.3
+pydub==0.25.1
 Pygments==2.17.2
 PyMySQL==1.1.0
 pyparsing==3.1.2
@@ -113,6 +120,7 @@ rsa==4.9
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+SpeechRecognition==3.10.3
 SQLAlchemy==2.0.29
 starlette==0.37.2
 sympy==1.12
