--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ blinker==1.7.0
 build==1.2.1
 cachetools==5.3.3
 certifi==2024.2.2
+chardet==3.0.4
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
 chromadb==0.4.24
@@ -35,17 +36,22 @@ google-auth==2.29.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.4.1
 googleapis-common-protos==1.63.0
+googletrans==3.0.0
 greenlet==3.0.3
 grpcio==1.62.1
 grpcio-status==1.62.1
-h11==0.14.0
-httpcore==1.0.5
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.4.1
+httpcore==0.9.1
 httplib2==0.22.0
 httptools==0.6.1
-httpx==0.27.0
+httpx==0.13.3
 huggingface-hub==0.22.2
 humanfriendly==10.0
-idna==3.6
+hyperframe==5.2.0
+idna==2.10
 imageio==2.34.0
 imageio-ffmpeg==0.4.9
 importlib-metadata==7.0.0
@@ -78,7 +84,6 @@ numexpr==2.10.0
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.17.1
-openai==1.16.2
 opentelemetry-api==1.24.0
 opentelemetry-exporter-otlp-proto-common==1.24.0
 opentelemetry-exporter-otlp-proto-grpc==1.24.0
@@ -115,6 +120,7 @@ PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==2.0.0
+rfc3986==1.5.0
 rich==13.7.1
 rsa==4.9
 shellingham==1.5.4
