--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ async-timeout==4.0.3
 attrs==23.2.0
 backoff==2.2.1
 bcrypt==4.1.2
+beautifulsoup4==4.12.3
 blinker==1.7.0
 build==1.2.1
 cachetools==5.3.3
@@ -20,6 +21,7 @@ colorama==0.4.6
 coloredlogs==15.0.1
 dataclasses-json==0.5.14
 decorator==4.4.2
+deep-translator==1.11.4
 Deprecated==1.2.14
 distro==1.9.0
 exceptiongroup==1.2.0
@@ -126,6 +128,7 @@ rsa==4.9
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.5
 SpeechRecognition==3.10.3
 SQLAlchemy==2.0.29
 starlette==0.37.2
